Update widget chat